--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ beautifulsoup4==4.13.4
 certifi==2025.4.26
 cffi==1.17.1
 charset-normalizer==3.4.2
+coloredlogs==15.0.1
 contourpy==1.3.2
 cycler==0.12.1
 Django==5.2.2
@@ -16,12 +17,19 @@ google-pasta==0.2.0
 grpcio==1.73.0
 h11==0.16.0
 h5py==3.14.0
+humanfriendly==10.0
 idna==3.10
+imageio==2.37.0
 jax==0.6.1
 jaxlib==0.6.1
+joblib==1.5.1
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
 keras==3.10.0
 kiwisolver==1.4.8
+lazy_loader==0.4
 libclang==18.1.1
+llvmlite==0.44.0
 Markdown==3.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
@@ -29,24 +37,37 @@ matplotlib==3.10.3
 mdurl==0.1.2
 mediapipe==0.10.21
 ml_dtypes==0.5.1
+mpmath==1.3.0
 namex==0.1.0
+networkx==3.5
+numba==0.61.2
 numpy==1.26.4
+onnxruntime==1.22.0
 opencv-contrib-python==4.11.0.86
 opencv-python==4.11.0.86
+opencv-python-headless==4.11.0.86
 opt_einsum==3.4.0
 optree==0.16.0
 outcome==1.3.0.post0
 packaging==25.0
 pillow==11.2.1
+platformdirs==4.3.8
+pooch==1.8.2
 protobuf==4.25.8
 pycparser==2.22
 Pygments==2.19.1
+PyMatting==1.1.14
 pyparsing==3.2.3
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
+referencing==0.36.2
+rembg==2.0.66
 requests==2.32.3
 rich==14.0.0
+rpds-py==0.25.1
+scikit-image==0.25.2
+scikit-learn==1.7.0
 scipy==1.15.3
 selenium==4.33.0
 sentencepiece==0.2.0
@@ -57,12 +78,16 @@ sortedcontainers==2.4.0
 sounddevice==0.5.2
 soupsieve==2.7
 sqlparse==0.5.3
+sympy==1.14.0
 tensorboard==2.19.0
 tensorboard-data-server==0.7.2
 tensorflow==2.19.0
 tensorflow-hub==0.16.1
 termcolor==3.1.0
 tf_keras==2.19.0
+threadpoolctl==3.6.0
+tifffile==2025.6.1
+tqdm==4.67.1
 trio==0.30.0
 trio-websocket==0.12.2
 typing_extensions==4.13.2
