--- a/requirements.txt
+++ b/requirements.txt
@@ -1,72 +1,111 @@
 absl-py==2.3.0
+addict==2.4.0
 asgiref==3.8.1
+asttokens==3.0.0
 astunparse==1.6.3
 attrs==25.3.0
-beautifulsoup4==4.13.4
-certifi==2025.4.26
+blinker==1.9.0
+certifi==2025.6.15
 cffi==1.17.1
 charset-normalizer==3.4.2
-coloredlogs==15.0.1
+click==8.2.1
+comm==0.2.2
+ConfigArgParse==1.7.1
 contourpy==1.3.2
 cycler==0.12.1
-Django==5.2.2
+dash==3.0.4
+decorator==5.2.1
+Django==5.2.3
+executing==2.2.0
+fastjsonschema==2.21.1
+filelock==3.18.0
+Flask==3.0.3
 flatbuffers==25.2.10
-fonttools==4.58.2
+fonttools==4.58.4
+fsspec==2025.5.1
 gast==0.6.0
 google-pasta==0.2.0
 grpcio==1.73.0
 h11==0.16.0
 h5py==3.14.0
-humanfriendly==10.0
 idna==3.10
-imageio==2.37.0
+importlib_metadata==8.7.0
+ipython==9.3.0
+ipython_pygments_lexers==1.1.1
+ipywidgets==8.1.7
+itsdangerous==2.2.0
 jax==0.6.1
 jaxlib==0.6.1
+jedi==0.19.2
+Jinja2==3.1.6
 joblib==1.5.1
 jsonschema==4.24.0
 jsonschema-specifications==2025.4.1
+jupyter_core==5.8.1
+jupyterlab_widgets==3.0.15
 keras==3.10.0
 kiwisolver==1.4.8
-lazy_loader==0.4
 libclang==18.1.1
-llvmlite==0.44.0
 Markdown==3.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib==3.10.3
+matplotlib-inline==0.1.7
 mdurl==0.1.2
 mediapipe==0.10.21
 ml_dtypes==0.5.1
 mpmath==1.3.0
 namex==0.1.0
+narwhals==1.43.0
+nbformat==5.10.4
+nest-asyncio==1.6.0
 networkx==3.5
-numba==0.61.2
 numpy==1.26.4
-onnxruntime==1.22.0
+nvidia-cublas-cu12==12.6.4.1
+nvidia-cuda-cupti-cu12==12.6.80
+nvidia-cuda-nvrtc-cu12==12.6.77
+nvidia-cuda-runtime-cu12==12.6.77
+nvidia-cudnn-cu12==9.5.1.17
+nvidia-cufft-cu12==11.3.0.4
+nvidia-cufile-cu12==1.11.1.6
+nvidia-curand-cu12==10.3.7.77
+nvidia-cusolver-cu12==11.7.1.2
+nvidia-cusparse-cu12==12.5.4.2
+nvidia-cusparselt-cu12==0.6.3
+nvidia-nccl-cu12==2.26.2
+nvidia-nvjitlink-cu12==12.6.85
+nvidia-nvtx-cu12==12.6.77
+open3d==0.19.0
 opencv-contrib-python==4.11.0.86
 opencv-python==4.11.0.86
-opencv-python-headless==4.11.0.86
 opt_einsum==3.4.0
 optree==0.16.0
 outcome==1.3.0.post0
 packaging==25.0
+pandas==2.3.0
+parso==0.8.4
+pexpect==4.9.0
 pillow==11.2.1
 platformdirs==4.3.8
-pooch==1.8.2
+plotly==6.1.2
+prompt_toolkit==3.0.51
 protobuf==4.25.8
+ptyprocess==0.7.0
+pure_eval==0.2.3
 pycparser==2.22
 Pygments==2.19.1
-PyMatting==1.1.14
 pyparsing==3.2.3
+pyquaternion==0.9.9
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
+pytz==2025.2
+PyYAML==6.0.2
 referencing==0.36.2
-rembg==2.0.66
-requests==2.32.3
+requests==2.32.4
+retrying==1.3.4
 rich==14.0.0
 rpds-py==0.25.1
-scikit-image==0.25.2
 scikit-learn==1.7.0
 scipy==1.15.3
 selenium==4.33.0
@@ -76,8 +115,8 @@ six==1.17.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 sounddevice==0.5.2
-soupsieve==2.7
 sqlparse==0.5.3
+stack-data==0.6.3
 sympy==1.14.0
 tensorboard==2.19.0
 tensorboard-data-server==0.7.2
@@ -86,15 +125,24 @@ tensorflow-hub==0.16.1
 termcolor==3.1.0
 tf_keras==2.19.0
 threadpoolctl==3.6.0
-tifffile==2025.6.1
+torch==2.7.1
+torchaudio==2.7.1
+torchvision==0.22.1
 tqdm==4.67.1
+traitlets==5.14.3
+trimesh==4.6.12
 trio==0.30.0
 trio-websocket==0.12.2
+triton==3.3.1
 typing_extensions==4.13.2
+tzdata==2025.2
 urllib3==2.4.0
+wcwidth==0.2.13
 webdriver-manager==4.0.2
 websocket-client==1.8.0
-Werkzeug==3.1.3
+Werkzeug==3.0.6
 wheel==0.45.1
+widgetsnbextension==4.0.14
 wrapt==1.17.2
 wsproto==1.2.0
+zipp==3.23.0
